--- a/css/m21.css
+++ b/css/m21.css
@@ -32,3 +32,113 @@
       padding: 10px 10px 10px 10px;
       z-index: 20;
 }
+
+
+/* midi player */
+
+.midiPlayer {
+    background-image: -webkit-gradient(linear,left top,left bottom,from(rgba(66,66,66,1)),to(rgba(22,22,22,1)));
+    background-image: -webkit-linear-gradient(top, rgba(66, 66, 66, 1) 0%, rgba(22, 22, 22, 1) 100%);
+    background-image: -moz-linear-gradient(top, rgba(66, 66, 66, 1) 0%, rgba(22, 22, 22, 1) 100%);
+    background-image: -ms-gradient(top, rgba(66, 66, 66, 1) 0%, rgba(22, 22, 22, 1) 100%);
+    background-image: -o-gradient(top, rgba(66, 66, 66, 1) 0%, rgba(22, 22, 22, 1) 100%);
+    background-image: linear-gradient(top, rgba(66, 66, 66, 1) 0%, rgba(22, 22, 22, 1) 100%);
+    padding: 15px 20px;
+    border: 1px solid #000;
+    box-shadow: 0 0 10px #fff;
+    -moz-box-shadow: 0 0 10px #fff;
+    -webkit-box-shadow: 0 0 10px #fff;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    color: #FFFFFF;
+    color: rgba(255, 255, 255, 0.8);
+    text-shadow: 1px 1px 2px #000;
+    -moz-text-shadow: 1px 1px 2px #000;
+    margin-bottom: 15px;
+    height: 42px; 
+    box-shadow: 0 -1px #000; 
+    max-width: 700px;
+}
+
+.midiPlayer .capsule {
+    border: 1px solid #000;
+    box-shadow: 0 0 10px #555;
+    -moz-box-shadow: 0 0 10px #555;
+    -webkit-box-shadow: 0 0 10px #555;
+    background: #000;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1, rgba(0,0,0,0.5)), color-stop(0, #333));
+    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5) 1, #333 0);
+    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5) 1, #333 0);
+    background-image: -ms-gradient(top, rgba(0, 0, 0, 0.5) 1, #333 0);
+    background-image: -o-gradient(top, rgba(0, 0, 0, 0.5) 1, #333 0);
+    background-image: linear-gradient(top, rgba(0, 0, 0, 0.5) 1, #333 0);
+    overflow: hidden;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    width: 420px;
+    display: inline-block;
+    height: 30px;
+}
+
+.midiPlayer .capsule .cursor {
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    background: #003b96;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1, #003b96), color-stop(0, #0088e9));
+    background-image: -webkit-linear-gradient(top, #0088e9 0%, #003b96 100%);
+    background-image: -moz-linear-gradient(top, #0088e9 0%, #003b96 100%);
+    background-image: -ms-gradient(top, #0088e9 0%, #003b96 100%);
+    background-image: -o-gradient(top, #0088e9 0%, #003b96 100%);
+    background-image: linear-gradient(top, #0088e9 0%, #003b96 100%);
+    width: 0;
+    display: inline-block;
+    height: 100%;
+}
+
+.midiPlayer .timePlayed, .midiPlayer .timeRemaining {
+    position: relative;
+    top: -9px;
+    padding: 0 10px;
+    width: 40px;
+    display: inline-block;
+    text-align: right;
+}
+
+.midiPlayer .timeRemaining {
+    text-align: left;
+}
+
+.midiPlayer .timeControls {
+    width: 560px;
+    margin: 0; 
+    float: left; 
+    position: relative; 
+    top: 5px;
+}    
+    
+.midiPlayer .positionControls {
+    position: relative; 
+    top: 5px;
+    margin: 0 auto; 
+    width: 80px; 
+    float: right;
+}
+    
+.midiPlayer .positionControls input[type="image"]:hover {
+    opacity: 1;
+}
+
+.midiPlayer .positionControls input[type="image"]:active {
+    opacity: 0.85;
+}
+
+.midiPlayer .positionControls input[type="image"] {
+    opacity: 0.7;
+    outline: none;
+}
+
