--- a/css/m21.css
+++ b/css/m21.css
@@ -1,9 +1,14 @@
 @import url("m21jFonts.css");
 
+.inlineBlock {
+	display: inline-block;
+	vertical-align: top;
+}
+
 .btButton {
-      font-family: BravuraTextM21j; 
+      font-family: BravuraTextM21j;
       font-size: 40pt;
-      position:relative;       
+      position:relative;
       width: 100px;
       height: 100px;
       padding-top: 10px;
@@ -17,7 +22,7 @@
       margin-right: 4px;
 }
 
-.loadingSoundfont { 
+.loadingSoundfont {
       top: 40px;
       background-color: #99ff99;
       color: black;
@@ -56,8 +61,8 @@
     text-shadow: 1px 1px 2px #000;
     -moz-text-shadow: 1px 1px 2px #000;
     margin-bottom: 15px;
-    height: 42px; 
-    box-shadow: 0 -1px #000; 
+    height: 42px;
+    box-shadow: 0 -1px #000;
     max-width: 700px;
     min-height: 70px;
 }
@@ -116,20 +121,20 @@
 
 .midiPlayer .timeControls {
     width: 560px;
-    margin: 0; 
-    float: left; 
-    position: relative; 
+    margin: 0;
+    float: left;
+    position: relative;
     top: 5px;
-}    
-    
+}
+
 .midiPlayer .positionControls {
-    position: relative; 
+    position: relative;
     top: 5px;
-    margin: 0 auto; 
-    width: 80px; 
+    margin: 0 auto;
+    width: 80px;
     float: right;
 }
-    
+
 .midiPlayer .positionControls input[type="image"]:hover {
     opacity: 1;
 }
@@ -142,4 +147,3 @@
     opacity: 0.7;
     outline: none;
 }
-
