--- a/css/m21.css
+++ b/css/m21.css
@@ -15,10 +15,7 @@
     font-size: 40pt;
     width: 100px;
     height: 100px;
-    padding-top: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 10px;
+    padding: 10px 20px;
     margin-right: 4px;
     border: 2px black dashed;
 }
@@ -27,10 +24,7 @@
     font-size: 20pt;
     width: 50px;
     height: 50px;
-    padding-top: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 5px;
+    padding: 5px 10px;
     margin-right: 2px;
     border: 1px black dashed;
 }
@@ -46,7 +40,7 @@
     font-size: 10px;
     opacity: 0.7;
     border-radius: 15px;
-    box-shadow: 0px 0px 19px #999;
+    box-shadow: 0 0 19px #999;
     padding: 10px 10px 10px 10px;
     z-index: 20;
 }
